--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 coverage==3.7.1
+defusedxml==0.4.1
 Django==1.8.2
+django-allauth==0.23.0
 django-filter==0.10.0
+django-grappelli==2.7.1
 django-guardian==1.3
 djangorestframework==3.1.3
 Markdown==2.6.2
+oauthlib==1.0.1
+python3-openid==3.0.6
+requests==2.7.0
+requests-oauthlib==0.5.0
 six==1.9.0
+wheel==0.24.0
