--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-guardian==1.3
 djangorestframework==3.1.3
 Markdown==2.6.2
 oauthlib==1.0.1
+psycopg2==2.6.1
 python3-openid==3.0.6
 requests==2.7.0
 requests-oauthlib==0.5.0
