--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -4,6 +4,7 @@ decorator==4.0.2
 defusedxml==0.4.1
 Django==1.8.4
 django-allauth==0.23.0
+django-cors-headers==1.1.0
 django-debug-toolbar==1.3.2
 django-extensions==1.5.6
 django-filter==0.10.0
