--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -3,13 +3,11 @@ coverage==3.7.1
 decorator==4.0.2
 defusedxml==0.4.1
 Django==1.8.4
-django-allauth==0.23.0
 django-cors-headers==1.1.0
 django-debug-toolbar==1.3.2
 django-extensions==1.5.6
 django-filter==0.10.0
 django-grappelli==2.7.1
-django-guardian==1.3
 djangorestframework==3.2.3
 factory-boy==2.5.2
 gnureadline==6.3.3
@@ -24,6 +22,7 @@ psycopg2==2.6.1
 python3-openid==3.0.6
 requests==2.7.0
 requests-oauthlib==0.5.0
+rules==0.4
 simplegeneric==0.8.1
 six==1.9.0
 sqlparse==0.1.16
