--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -9,6 +9,7 @@ django-extensions==1.5.6
 django-filter==0.10.0
 django-grappelli==2.7.1
 djangorestframework==3.2.3
+djangorestframework-jwt==1.7.2
 factory-boy==2.5.2
 gnureadline==6.3.3
 ipython==4.0.0
@@ -19,6 +20,7 @@ path.py==8.1
 pexpect==3.3
 pickleshare==0.5
 psycopg2==2.6.1
+PyJWT==1.4.0
 python3-openid==3.0.6
 requests==2.7.0
 requests-oauthlib==0.5.0
