--- a/ember-gamers/bower.json
+++ b/ember-gamers/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "ember-gamers",
   "dependencies": {
+    "bootstrap-sass": "~3.3.5",
+    "bootswatch-sass": "~3.3.1",
     "ember": "1.13.7",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
@@ -9,10 +11,9 @@
     "ember-qunit": "0.4.9",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
+    "ember-simple-auth": "0.8.0",
     "jquery": "^2.0.0",
     "loader.js": "ember-cli/loader.js#3.2.1",
-    "qunit": "~1.18.0",
-    "ember-simple-auth": "0.8.0",
-    "materialize": "~0.97.0"
+    "qunit": "~1.18.0"
   }
 }
