--- a/ember-gamers/package.json
+++ b/ember-gamers/package.json
@@ -23,13 +23,13 @@
     "ember-cli": "1.13.8",
     "ember-cli-app-version": "0.5.0",
     "ember-cli-babel": "^5.1.3",
+    "ember-cli-bootstrap-sassy": "0.0.18",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.1",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.2.0",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-materialize": "0.18.5",
     "ember-cli-qunit": "^1.0.0",
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "3.3.1",
@@ -48,7 +48,5 @@
     "ember-new-computed": "1.0.3",
     "ember-radio-button": "1.0.7"
   },
-  "dependencies": {
-    "ember-cli-materialize": "^0.18.5"
-  }
+  "dependencies": {}
 }
