--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -8,10 +8,13 @@ django-debug-toolbar==1.3.2
 django-extensions==1.5.6
 django-filter==0.10.0
 django-grappelli==2.7.1
+django-rest-swagger==0.3.4
 djangorestframework==3.2.3
+djangorestframework-jsonapi==2.0.0a2
 djangorestframework-jwt==1.7.2
 factory-boy==2.5.2
 gnureadline==6.3.3
+inflection==0.3.1
 ipython==4.0.0
 ipython-genutils==0.1.0
 Markdown==2.6.2
@@ -22,6 +25,7 @@ pickleshare==0.5
 psycopg2==2.6.1
 PyJWT==1.4.0
 python3-openid==3.0.6
+PyYAML==3.11
 requests==2.7.0
 requests-oauthlib==0.5.0
 rules==0.4
