update to viewsets

--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,5 +1,9 @@
 appnope==0.1.0
+cffi==1.2.1
+characteristic==14.3.0
 coverage==3.7.1
+cryptography==1.0.1
+cssselect==0.9.1
 decorator==4.0.2
 defusedxml==0.4.1
 Django==1.8.4
@@ -12,25 +16,40 @@ django-rest-swagger==0.3.4
 djangorestframework==3.2.3
 djangorestframework-jsonapi==2.0.0a2
 djangorestframework-jwt==1.7.2
+enum34==1.0.4
 factory-boy==2.5.2
 gnureadline==6.3.3
+idna==2.0
 inflection==0.3.1
+ipaddress==1.0.14
 ipython==4.0.0
 ipython-genutils==0.1.0
+lxml==3.4.4
 Markdown==2.6.2
 oauthlib==1.0.1
 path.py==8.1
 pexpect==3.3
 pickleshare==0.5
 psycopg2==2.6.1
+pyasn1==0.1.8
+pyasn1-modules==0.0.7
+pycparser==2.14
 PyJWT==1.4.0
+pyOpenSSL==0.15.1
 python3-openid==3.0.6
 PyYAML==3.11
+queuelib==1.4.2
 requests==2.7.0
 requests-oauthlib==0.5.0
 rules==0.4
+Scrapy==1.0.3
+scrapy-djangoitem==1.0.0
+service-identity==14.0.0
 simplegeneric==0.8.1
 six==1.9.0
 sqlparse==0.1.16
 traitlets==4.0.0
+Twisted==15.4.0
+w3lib==1.12.0
 wheel==0.24.0
+zope.interface==4.1.2
